[package]
name = "osdev-rart"
version = "0.1.0"
authors = ["Federico Pizzuti <federico.pizzuti@ed.ac.uk>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
bitflags = "0.7.0"
cpuio = "*"
multiboot2 = "0.1.0"
once = "0.3.3"
spin = "0.4.5"
volatile = "0.1.0"
x86_64 = "0.1.2"

[dependencies.bump_allocator]
path = "libs/bump_allocator"
[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"
